# CMakeList.txt : CMake project for SvelteSupaRise, include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 3.8)

project ("SvelteSupaRise")

# Add source to this project's executable.
add_executable (SvelteSupaRise "SvelteSupaRise.cpp" "SvelteSupaRise.h")

# TODO: Add tests and install targets if needed.
